Add backend work to support automatic season updating and AWS support