@@ -7,6 +7,7 @@ import accounts.apiobjects.SingleSeasonGW2Rating;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import leaderboardbot.Leaderboard;
 
 import java.io.IOException;
 import java.net.URL;
@@ -20,7 +21,9 @@ public class APIHandler {
     private static final String LEADERBOARDEXTENSION_NA = "/leaderboards/ladder/na";
     private static final String LEADERBOARDEXTENSION_EU = "/leaderboards/ladder/eu";
     private LinkedList seasonIDs;
-    private Object latestSeason;
+    private Season latestSeason;
+
+    private ArrayList<Season> seasons;
 
     public APIHandler() throws IOException {
         initializeSeasons();
@@ -32,23 +35,30 @@ public class APIHandler {
         seasonIDs = mapper.readValue(
                 new URL(GW2API_SEASONURL),
                 LinkedList.class);
-        ArrayList<Season> seasons = new ArrayList<>();
+        seasons = new ArrayList<>();
         for (var seasonID : seasonIDs) {
             String IDstr = seasonID.toString();
             Season newSeason = mapper.readValue(
                     new URL(GW2API_SEASONURL
-                    + "/"
-                    + latestSeason), Season.class);
+                            + "/"
+                            + IDstr), Season.class);
             seasons.add(newSeason);
         }
 
-
-        latestSeason = seasonIDs.getLast();
-
-        System.out.println("Season ID:" + latestSeason);
+        latestSeason = seasons.get(seasons.size() - 1);
+        System.out.println("Season ID:" + latestSeason.getKey());
     }
 
-    public ArrayList<GW2Account> getLeaderboard(boolean isNA) {
+    public void reinitializeSeasons() {
+        try {
+            initializeSeasons();
+        } catch (IOException e) {
+            System.out.println("Failed to re-load season keys");
+            e.printStackTrace();
+        }
+    }
+
+    public Leaderboard getLeaderboard(boolean isNA) {
         ObjectMapper mapper = new ObjectMapper();
         try {
             ArrayList<GW2Account> list = new ArrayList<>();
@@ -56,18 +66,19 @@ public class APIHandler {
                 list.addAll(mapper.readValue(
                         new URL(GW2API_SEASONURL
                                 + "/"
-                                + latestSeason
+                                + latestSeason.getKey()
                                 + (isNA ? LEADERBOARDEXTENSION_NA : LEADERBOARDEXTENSION_EU)
                                 + "?page="
                                 + i),
                         new TypeReference<ArrayList<GW2Account>>() {
                         }));
             }
-            return list;
+            list.forEach(a -> a.setSeason(latestSeason));
+            return new Leaderboard(latestSeason, list);
         } catch (IOException e) {
             e.printStackTrace();
         }
-        return new ArrayList<>();
+        return new Leaderboard(latestSeason, new ArrayList<>());
     }
 
     public int getCurrentRatingFromAPIKey(String key) {
@@ -82,7 +93,7 @@ public class APIHandler {
                     new TypeReference<ArrayList<SingleSeasonGW2Rating>>() {
                     }));
             for (SingleSeasonGW2Rating cur : list) {
-                if (cur.getSeason_id().equals(latestSeason)) {
+                if (cur.getSeason_id().equals(latestSeason.getKey())) {
                     rating = cur.getCurrent().getRating();
                     System.out.println(cur.getSeason_id());
                 }
@@ -112,4 +123,11 @@ public class APIHandler {
         return name;
     }
 
+    public ArrayList<Season> getSeasons() {
+        return seasons;
+    }
+
+    public Season getLatestSeason() {
+        return latestSeason;
+    }
 }
